[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.0"
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0.125", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }